--- a/index.html
+++ b/index.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samorząd Szkolny ZSEEiM</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>Sus</p>
+    <!-- Główny div przechowujący wszystkie elementy -->
+    <div id="main">
+        <!-- Tu będzie div odpowiedzialny za pasek nawigacji -->
+        <div id="nav">
+            <p>Jakiś tekst</p>
+        </div>
+    </div>
 </body>
 </html>
