Tabela pasku nawigacji

--- a/index.html
+++ b/index.html
@@ -10,9 +10,16 @@
 <body>
     <!-- Główny div przechowujący wszystkie elementy -->
     <div id="main">
-        <!-- Tu będzie div odpowiedzialny za pasek nawigacji -->
+        <!-- Div nawigacji -->
         <div id="nav">
-            <p>Jakiś tekst</p>
+            <table id="nav-table">
+                <tr>
+                    <td>Logo</td>
+                    <td>Aktualne zbiórki</td>
+                    <td>Członkowie</td>
+                    <td>Informacje</td>
+                </tr>
+            </table>
         </div>
     </div>
 </body>
