Dodanie głównego tła

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <!-- Główny div przechowujący wszystkie elementy -->
-    <div id="main">
+    <main>
         <!-- Div nawigacji -->
-        <div id="nav">
+        <nav>
             <table id="nav-table">
                 <tr>
                     <td>Logo</td>
@@ -20,7 +20,7 @@
                     <td>Informacje</td>
                 </tr>
             </table>
-        </div>
-    </div>
+        </nav>
+    </main>
 </body>
 </html>
