--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <div id="nav">
             <table id="nav-table">
                 <tr>
-                    <td>Logo</td>
-                    <td>Aktualne zbiórki</td>
-                    <td>Członkowie</td>
-                    <td>Informacje</td>
+                    <td><div id="nav-logo">Strona główna</div></td>
+                    <td><div id="nav-news">Aktualności</div></td>
+                    <td><div id="nav-members">Członkowie</div></td>
+                    <td><div id="nav-info">Informacje</div></td>
                 </tr>
             </table>
         </div>
