--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="ZSEEiM Bielsko-Biała - oficjalna strona samorządu szkolnego">
+    <meta name="keywords" content="ZSSEiM, Bielsko, Bielsko-Biała, Szkoła Bielsko, Samorząd ZSEEiM, Samorząd szkolny">
     <title>Samorząd Szkolny ZSEEiM</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
-    <!-- Główny div przechowujący wszystkie elementy -->
+    <!-- Główny kontener -->
     <main>
-        <!-- Div nawigacji -->
+        <!-- Nawigacja -->
         <nav>
             <table id="nav-table">
                 <tr>
@@ -21,6 +24,10 @@
                 </tr>
             </table>
         </nav>
+        <!-- Treść strony -->
+        <content>
+            JP II
+        </content>
     </main>
 </body>
 </html>
