--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <meta name="description" content="ZSEEiM Bielsko-Biała - oficjalna strona samorządu szkolnego">
     <meta name="keywords" content="ZSSEiM, Bielsko, Bielsko-Biała, Szkoła Bielsko, Samorząd ZSEEiM, Samorząd szkolny">
     <title>Samorząd Szkolny ZSEEiM</title>
+
+    <!-- CSS -->
     <link rel="stylesheet" href="style.css">
+    <!-- JS -->
     <script src="script.js"></script>
+    
 </head>
 <body>
     <!-- Główny kontener -->
@@ -27,6 +31,15 @@
         <!-- Treść strony -->
         <content>
             JP II
+            <br>
+            <br>
+            Jan Paweł II (łac. Ioannes Paulus PP. II, wł. Giovanni Paolo II, właśc. Karol Józef Wojtyła i[1]; ur. 18 maja 1920 w Wadowicach, zm. 2 kwietnia 2005 w Watykanie) – polski duchowny rzymskokatolicki, biskup pomocniczy krakowski (1958–1964), a następnie arcybiskup metropolita krakowski (1964–1978), kardynał prezbiter (1967–1978), zastępca Przewodniczącego Konferencji Episkopatu Polski (1969–1978), 264. papież i 6. Suweren Państwa Watykańskiego w latach 1978–2005. Święty Kościoła katolickiego.
+            <br>
+            Poeta i poliglota, a także aktor niezawodowy, dramaturg i pedagog. Filozof historii, fenomenolog, mistyk i przedstawiciel personalizmu chrześcijańskiego.
+            <br>
+            16 października 1978 został wybrany na papieża przez drugie zgromadzenie kardynałów, po śmierci Jana Pawła I, który zmarł po trzydziestu trzech dniach pontyfikatu. Przyjął imiona Jan Paweł dla uhonorowania swojego poprzednika. Jego wybór na Stolicę Piotrową miał szczególny wpływ na wydarzenia w Europie Wschodniej i w Azji w latach 80. i 90. XX wieku, w szczególności na przemiany demokratyczne w Polsce i w innych krajach bloku wschodniego. Od początku swojego pontyfikatu prowadził energiczne działania przeciwko komunizmowi i uciskowi politycznemu.
+            <br>
+            Za główny cel papiestwa postawił sobie transformację i zmianę położenia Kościoła katolickiego, chciał „postawić swój Kościół w sercu nowego sojuszu religijnego, który zgromadziłby żydów, muzułmanów i chrześcijan w wielkiej religijnej armadzie”[potrzebny przypis]. Przyczynił się do poprawienia relacji Kościoła katolickiego z judaizmem, islamem, z Kościołem prawosławnym oraz Wspólnotą anglikańską[2][3][4]. Był jednym z najczęściej podróżujących światowych przywódców w historii, odwiedzając w czasie swojego pontyfikatu 129 państw, co interpretowano jako chęć zbudowania relacji między różnymi narodami i religiami.
         </content>
     </main>
 </body>
