Dodanie animacji nav (hover)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="style.css">
     <!-- JS -->
     <script src="script.js"></script>
+
+    <!-- animation CSS -->
+    <link rel="stylesheet" href="animation.css">
     
 </head>
 <body>
@@ -21,10 +24,10 @@
         <nav>
             <table id="nav-table">
                 <tr>
-                    <td><div id="nav-logo">Strona główna</div></td>
-                    <td><div id="nav-news">Aktualności</div></td>
-                    <td><div id="nav-members">Członkowie</div></td>
-                    <td><div id="nav-info">Informacje</div></td>
+                    <td><div id="nav-logo"><div class="nav-default"><img src="img/home.png" alt="" width="39px" height="39px"></div><div class="nav-default2">Strona główna</div></div></td>
+                    <td><div id="nav-news"><div class="nav-default"><img src="img/now.png" alt="" width="39px" height="39px"></div><div class="nav-default2">Aktualności</div></div></td>
+                    <td><div id="nav-members"><div class="nav-default"><img src="img/profil.png" alt="" width="39px" height="39px"></div><div class="nav-default2">Członkowie</div></div></td>
+                    <td><div id="nav-info"><div class="nav-default"><img src="img/info.png" alt="" width="39px" height="39px"></div><div class="nav-default2">Informacje</div></div></td>
                 </tr>
             </table>
         </nav>
