--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
+    <!--CSS-tło-->
+    <link rel="stylesheet" href="tlo_animacja.css">
     <!-- JS -->
     <script src="script.js"></script>
 
