Małe zmiany aby zwiększyć czytelność
- Animacja tła przeniesiona do animation.css
- Donane kilka komentarzy

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
-    <!--CSS-tło-->
-    <link rel="stylesheet" href="tlo_animacja.css">
+    
     <!-- animation CSS -->
     <link rel="stylesheet" href="animation.css">
     
@@ -38,7 +37,7 @@
             JP II
             <br>
             <br>
-            Jan Paweł II (łac. Ioannes Paulus PP. II, wł. Giovanni Paolo II, właśc. Karol Józef Wojtyła ur. 18 maja 1920 w Wadowicach, zm. 2 kwietnia 2005 w Watykanie) – polski duchowny rzymskokatolicki, biskup pomocniczy krakowski (1958–1964), a następnie arcybiskup metropolita krakowski (1964–1978), kardynał prezbiter (1967–1978), zastępca Przewodniczącego Konferencji Episkopatu Polski (1969–1978), 264. papież i 6. Suweren Państwa Watykańskiego w latach 1978–2005. Święty Kościoła katolickiego.
+            Jan Paweł II (łac. Ioannes Paulus PP. SUS II, wł. Giovanni Paolo sus II, właśc. Karol Józef Wojtyła ur. 18 maja 1920 w Wadowicach, zm. 2 kwietnia 2005 w Watykanie) – polski duchowny rzymskokatolicki, biskup pomocniczy krakowski (1958–1964), a następnie arcybiskup metropolita krakowski (1964–1978), kardynał prezbiter (1967–1978), zastępca Przewodniczącego Konferencji Episkopatu Polski (1969–1978), 264. papież i 6. Suweren Państwa Watykańskiego w latach 1978–2005. Święty Kościoła katolickiego.
             <br>
             Poeta i poliglota, a także aktor niezawodowy, dramaturg i pedagog. Filozof historii, fenomenolog, mistyk i przedstawiciel personalizmu chrześcijańskiego.
             <br>
