--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style.css">
     
     <!-- animation CSS -->
-    <link rel="stylesheet" href="animation.css">
+    <!-- <link rel="stylesheet" href="animation.css"> -->
     
 </head>
 <body>
@@ -23,13 +23,13 @@
         <nav>
             <table id="nav-table">
                 <tr>
-                    <td><div id="nav-logo"><div class="nav-default"><img src="img/home.png" alt=""></div><div class="nav-default2">Strona główna</div></div></td>
+                    <td><div id="nav-logo">Strona główna</div></td>
 
-                    <td><div id="nav-news"><div class="nav-default"><img src="img/now.png" alt=""></div><div class="nav-default2">Aktualności</div></div></td>
+                    <td><div id="nav-news">Aktualności</div></td>
 
-                    <td><div id="nav-members"><div class="nav-default"><img src="img/profil.png" alt=""></div><div class="nav-default2">Członkowie</div></div></td>
+                    <td><div id="nav-members">Członkowie</div></td>
 
-                    <td><div id="nav-info"><div class="nav-default"><img src="img/info.png" alt=""></div><div class="nav-default2">Informacje</div></div></td>
+                    <td><div id="nav-info">Informacje</div></td>
                 </tr>
             </table>
         </nav>
