--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <tr>
                     <td><div id="nav-logo">Strona główna</div></td>
 
-                    <td><div id="nav-news">Aktualności</div></td>
+                    <td><div id="nav-news"><a href="aktualnosci.html" title="Aktualności">Aktualności</a></div></td>
 
                     <td><div id="nav-members">Członkowie</div></td>
 
