--- a/czlonkowie.html
+++ b/czlonkowie.html
@@ -34,7 +34,7 @@
     <main>
         <!-- Treść strony -->
         <content>
-            <p>Tutaj będą kiedyś aktualności</p>
+            <p>Tutaj będą członkowie</p>
         </content>
     </main>
     
