--- a/aktualnosci.html
+++ b/aktualnosci.html
@@ -7,7 +7,7 @@
     <meta name="description" content="ZSEEiM Bielsko-Biała - oficjalna strona samorządu szkolnego">
     <meta name="keywords" content="ZSSEiM, Bielsko, Bielsko-Biała, Szkoła Bielsko, Samorząd ZSEEiM, Samorząd szkolny">
     <title>Samorząd Szkolny ZSEEiM</title>
-    <link rel="icon" href="img/favicon.ico">
+    <link rel="icon" href="img/icon.png">
 
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
