--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="ZSEEiM Bielsko-Biała - oficjalna strona samorządu szkolnego">
     <meta name="keywords" content="ZSSEiM, Bielsko, Bielsko-Biała, Szkoła Bielsko, Samorząd ZSEEiM, Samorząd szkolny">
     <title>Samorząd Szkolny ZSEEiM</title>
+
+    <!-- icona -->
     <link rel="icon" href="img/icon.png">
 
     <!-- CSS -->
