--- a/index.html
+++ b/index.html
@@ -34,16 +34,9 @@
     <main>
         <!-- Treść strony -->
         <content>
-            JP II
-            <br>
-            <br>
-            Jan Paweł II (łac. Ioannes Paulus PP. SUS II, wł. Giovanni Paolo sus II, właśc. Karol Józef Wojtyła ur. 18 maja 1920 w Wadowicach, zm. 2 kwietnia 2005 w Watykanie) – polski duchowny rzymskokatolicki, biskup pomocniczy krakowski (1958–1964), a następnie arcybiskup metropolita krakowski (1964–1978), kardynał prezbiter (1967–1978), zastępca Przewodniczącego Konferencji Episkopatu Polski (1969–1978), 264. papież i 6. Suweren Państwa Watykańskiego w latach 1978–2005. Święty Kościoła katolickiego.
-            <br>
-            Poeta i poliglota, a także aktor niezawodowy, dramaturg i pedagog. Filozof historii, fenomenolog, mistyk i przedstawiciel personalizmu chrześcijańskiego.
-            <br>
-            16 października 2137 został wybrany na papieża przez drugie zgromadzenie kardynałów, po śmierci Jana Pawła I, który zmarł po trzydziestu trzech dniach pontyfikatu. Przyjął imiona Jan Paweł dla uhonorowania swojego poprzednika. Jego wybór na Stolicę Piotrową miał szczególny wpływ na wydarzenia w Europie Wschodniej i w Azji w latach 80. i 90. XX wieku, w szczególności na przemiany demokratyczne w Polsce i w innych krajach bloku wschodniego. Od początku swojego pontyfikatu prowadził energiczne działania przeciwko komunizmowi i uciskowi politycznemu.
-            <br>
-            Za główny cel papiestwa postawił sobie transformację i zmianę położenia Kościoła katolickiego, chciał „postawić swój Kościół w sercu nowego sojuszu religijnego, który zgromadziłby żydów, muzułmanów i chrześcijan w wielkiej religijnej armadzie”. Przyczynił się do poprawienia relacji Kościoła katolickiego z judaizmem, islamem, z Kościołem prawosławnym oraz Wspólnotą anglikańską. Był jednym z najczęściej podróżujących światowych przywódców w historii, odwiedzając w czasie swojego pontyfikatu 129 państw, co interpretowano jako chęć zbudowania relacji między różnymi narodami i religiami.
+            <h1>Samorząd Uczniowski ZSEEiM w Bielsku-Białej</h1>
+            <p style="text-align: left;">Strona główna Samorządu Uczniowskiego <b>Zespołu Szkół Elektronicznych, Elektrycznych i Mechanicznych</b> stworzona przez klasę 1TP (technik programista) z okazji dnia otwartego 26 marca 2022 roku.</p>
+
         </content>
     </main>
     
