--- a/czlonkowie.html
+++ b/czlonkowie.html
@@ -36,7 +36,15 @@
     <main>
         <!-- Treść strony -->
         <content>
-            <p>Tutaj będą członkowie</p>
+            <h1>Członkowie</h1>
+            <div id="patryk-markiel">
+                <img src="img/patryk.png" title="Patryk Markiel">
+                <p>Patryk Markiel</p>
+            </div>
+            <div id="przemek-pytlarz">
+                <img src="img/przemsus.png" title="Przemek Pytlarz">
+                <p>Przemek Pytlarz</p>
+            </div>
         </content>
     </main>
     
