--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!-- Treść strony -->
         <content>
             <h1>Samorząd Uczniowski ZSEEiM w Bielsku-Białej</h1>
-            <p style="text-align: left;">Strona główna Samorządu Uczniowskiego <b>Zespołu Szkół Elektronicznych, Elektrycznych i Mechanicznych</b> stworzona przez klasę 1TP (technik programista) z okazji dnia otwartego 26 marca 2022 roku.</p>
+            <p>Strona główna Samorządu Uczniowskiego <b>Zespołu Szkół Elektronicznych, Elektrycznych i Mechanicznych</b> stworzona przez klasę 1TP (technik programista) z okazji dnia otwartego 26 marca 2022 roku.</p>
             <img src="img/kamil.png" style="width: 100%;" title="Oto jeden z uczniów, który sobie zasnął na lekcji niemieckiego u pani Kubiczek">
         </content>
     </main>
