--- a/index.html
+++ b/index.html
@@ -38,7 +38,22 @@
         <content>
             <h1>Samorząd Uczniowski ZSEEiM w Bielsku-Białej</h1>
             <p style="text-align: left;">Strona główna Samorządu Uczniowskiego <b>Zespołu Szkół Elektronicznych, Elektrycznych i Mechanicznych</b> stworzona przez klasę 1TP (technik programista) z okazji dnia otwartego 26 marca 2022 roku.</p>
-            <img src="img/kamil.png" style="width: 100%;" title="Oto jeden z uczniów, który sobie zasnął na lekcji niemieckiego u pani Kubiczek">
+            <article>
+                <img src="img/kamil.png" title="Oto jeden z uczniów, który sobie zasnął na lekcji niemieckiego u pani Kubiczek">
+                <p> Kamoooooo</p>
+            </article>
+            <article>
+                <img src="img/kamil.png" title="Oto jeden z uczniów, który sobie zasnął na lekcji niemieckiego u pani Kubiczek">
+                <p> Kamooooooooo</p>
+            </article>
+            <article>
+                <img src="img/kamil.png" title="Oto jeden z uczniów, który sobie zasnął na lekcji niemieckiego u pani Kubiczek">
+                <p> Kamoooooo</p>
+            </article>
+            <article>
+                <img src="img/kamil.png" title="Oto jeden z uczniów, który sobie zasnął na lekcji niemieckiego u pani Kubiczek">
+                <p> Kamooooooooo</p>
+            </article>
         </content>
     </main>
     
