--- a/czlonkowie.html
+++ b/czlonkowie.html
@@ -41,9 +41,17 @@
                 <img src="img/patryk.png" title="Patryk Markiel">
                 <p>Patryk Markiel</p>
             </div>
-            <div id="przemek-pytlarz">
-                <img src="img/przemsus.png" title="Przemek Pytlarz">
-                <p>Przemek Pytlarz</p>
+            <div id="patryk-markiel">
+                <img src="img/patryk.png" title="Patryk Markiel">
+                <p>Patryk Markiel</p>
+            </div>
+            <div id="patryk-markiel">
+                <img src="img/patryk.png" title="Patryk Markiel">
+                <p>Patryk Markiel</p>
+            </div>
+            <div id="patryk-markiel">
+                <img src="img/patryk.png" title="Patryk Markiel">
+                <p>Patryk Markiel</p>
             </div>
         </content>
     </main>
