--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- Nawigacja -->
         <nav>
                     
-                    <a href="index.html" title="Strona główna" style="color: white;">Strona główna</a>
+                    <a href="index.html" title="Strona główna" class="nav-selected">Strona główna</a>
 
                     <a href="aktualnosci.html" title="Aktualności">Aktualności</a>
                     
