--- a/czlonkowie.html
+++ b/czlonkowie.html
@@ -37,22 +37,22 @@
         <!-- Treść strony -->
         <content>
             <h1>Członkowie</h1>
-            <div id="patryk-markiel">
+            <article>
                 <img src="img/patryk.png" title="Patryk Markiel">
                 <p>Patryk Markiel</p>
-            </div>
-            <div id="patryk-markiel">
+            </article>
+            <article>
                 <img src="img/patryk.png" title="Patryk Markiel">
                 <p>Patryk Markiel</p>
-            </div>
-            <div id="patryk-markiel">
+            </article>
+            <article>
                 <img src="img/patryk.png" title="Patryk Markiel">
                 <p>Patryk Markiel</p>
-            </div>
-            <div id="patryk-markiel">
+            </article>
+            <article>
                 <img src="img/patryk.png" title="Patryk Markiel">
                 <p>Patryk Markiel</p>
-            </div>
+            </article>
         </content>
     </main>
     
