--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="style.css">
     
     <!-- animation CSS -->
-    <!-- <link rel="stylesheet" href="animation.css"> -->
+    <link rel="stylesheet" href="animation.css">
     
 </head>
 <body>
@@ -39,20 +39,24 @@
             <h1>Samorząd Uczniowski ZSEEiM w Bielsku-Białej</h1>
             <p>Strona główna Samorządu Uczniowskiego <b>Zespołu Szkół Elektronicznych, Elektrycznych i Mechanicznych</b> stworzona przez klasę 1TP (technik programista) z okazji dnia otwartego 26 marca 2022 roku.</p>
             <article>
-                <img src="img/kamil.png" title="Oto jeden z uczniów, który sobie zasnął na lekcji niemieckiego u pani Kubiczek">
-                <p> Kamoooooo</p>
+                <img class="img-article" src="img/kamil.png">
+                <p class="title text-article">Kamoooooo</p>
+                <p class="text text-article">Oto jeden z uczniów, który sobie zasnął na lekcji niemieckiego u pani Kubiczek</p>
             </article>
             <article>
-                <img src="img/kamil.png" title="Oto jeden z uczniów, który sobie zasnął na lekcji niemieckiego u pani Kubiczek">
-                <p> Kamooooooooo</p>
+                <img class="img-article" src="img/kamil.png">
+                <p class="title text-article">Kamsus</p>
+                <p class="text text-article">Oto jeden z uczniów, który sobie zasnął na lekcji niemieckiego u pani Kubiczek</p>
             </article>
             <article>
-                <img src="img/kamil.png" title="Oto jeden z uczniów, który sobie zasnął na lekcji niemieckiego u pani Kubiczek">
-                <p> Kamoooooo</p>
+                <img class="img-article" src="img/kamil.png">
+                <p class="title text-article">Kamsisko</p>
+                <p class="text text-article">Oto jeden z uczniów, który sobie zasnął na lekcji niemieckiego u pani Kubiczek</p>
             </article>
             <article>
-                <img src="img/kamil.png" title="Oto jeden z uczniów, który sobie zasnął na lekcji niemieckiego u pani Kubiczek">
-                <p> Kamooooooooo</p>
+                <img class="img-article" src="img/kamil.png">
+                <p class="title text-article">Kamyk</p>
+                <p class="text text-article">Oto jeden z uczniów, który sobie zasnął na lekcji niemieckiego u pani Kubiczek</p>
             </article>
         </content>
     </main>
