--- a/informacje.html
+++ b/informacje.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="style.css">
     
     <!-- animation CSS -->
-    <!-- <link rel="stylesheet" href="animation.css"> -->
+    <link rel="stylesheet" href="animation.css">
     
 </head>
 <body>
