Never gonna give you up

--- a/onas.html
+++ b/onas.html
@@ -24,10 +24,10 @@
         <!-- Nawigacja -->
         <nav>
                     
-            <a href="index.html" title="Strona Główna">Strona główna</a>
-            <a href="aktualnosci.html" title="Aktualności">Aktualności</a>
-            <a href="onas.html" title="O nas" class="nav-selected">O nas</a>         
-            <a href="informacje.html" title="Informacje">Informacje</a>
+            <a href="index.html" title="Never gonna give you up">Strona główna</a>
+            <a href="aktualnosci.html" title="Never gonna let you down">Aktualności</a>
+            <a href="onas.html" title="Never gonna run around and desert you" class="nav-selected">O nas</a>         
+            <a href="informacje.html" title="Never gonna make you cry">Informacje</a>
             
 </nav>
     <main>
