--- a/aktualnosci.html
+++ b/aktualnosci.html
@@ -36,7 +36,24 @@
     <main>
         <!-- Treść strony -->
         <content>
-            <p>Tutaj będą kiedyś aktualności</p>
+            <article>
+                <h1>Kamkus</h1>
+                    <table>
+                        <tr>
+                            <td>
+                                <img src="img/kamil.png"  class="img-aktualnosci" alt="">
+                            </td>
+                            <td>
+                                Never gonna give you up
+                                Never gonna let you down
+                                Never gonna run around and desert you
+                                Never gonna make you cry
+                                Never gonna say goodbye
+                                Never gonna tell a lie and hurt you 
+                            </td>
+                        </tr>
+                    </table>
+            </article>
         </content>
     </main>
     
