--- a/aktualnosci.html
+++ b/aktualnosci.html
@@ -36,7 +36,11 @@
     <main>
         <!-- Treść strony -->
         <content>
-            <p>Tutaj będą kiedyś aktualności</p>
+            <article1 style="margin-left: 0%; margin-right: 50%;">
+                <test1>
+                    <img style="width: 50%;"src="img/kamil.png"><h1 style="margin-top: 50%; margin-bottom: 50%;">Uczeń śpi😬</h1>
+                </test1>
+            </article1>
         </content>
     </main>
     
