strona głóna > aktalności (link)

--- a/aktualnosci.html
+++ b/aktualnosci.html
@@ -36,8 +36,62 @@
     <main>
         <!-- Treść strony -->
         <content>
-            <article>
-                <h1>Kamkus</h1>
+            <article id="Kamoooooo">
+                <h1>Kamoooooo</h1>
+                    <table>
+                        <tr>
+                            <td>
+                                <img src="img/kamil.png"  class="img-aktualnosci" alt="">
+                            </td>
+                            <td>
+                                Never gonna give you up
+                                Never gonna let you down
+                                Never gonna run around and desert you
+                                Never gonna make you cry
+                                Never gonna say goodbye
+                                Never gonna tell a lie and hurt you 
+                            </td>
+                        </tr>
+                    </table>
+            </article>
+            <article id="Kamsus">
+                <h1>Kamsus</h1>
+                    <table>
+                        <tr>
+                            <td>
+                                <img src="img/kamil.png"  class="img-aktualnosci" alt="">
+                            </td>
+                            <td>
+                                Never gonna give you up
+                                Never gonna let you down
+                                Never gonna run around and desert you
+                                Never gonna make you cry
+                                Never gonna say goodbye
+                                Never gonna tell a lie and hurt you 
+                            </td>
+                        </tr>
+                    </table>
+            </article>
+            <article id="Kamuś">
+                <h1>Kamuś</h1>
+                    <table>
+                        <tr>
+                            <td>
+                                <img src="img/kamil.png"  class="img-aktualnosci" alt="">
+                            </td>
+                            <td>
+                                Never gonna give you up
+                                Never gonna let you down
+                                Never gonna run around and desert you
+                                Never gonna make you cry
+                                Never gonna say goodbye
+                                Never gonna tell a lie and hurt you 
+                            </td>
+                        </tr>
+                    </table>
+            </article>
+            <article id="Kamyk">
+                <h1>Kamyk</h1>
                     <table>
                         <tr>
                             <td>
