--- a/aktualnosci.html
+++ b/aktualnosci.html
@@ -36,7 +36,7 @@
     <main>
         <!-- Treść strony -->
         <content>
-            <article id="Kamoooooo">
+            <article id="Kamoooooo" class="aktualnosci">
                 <h1>Kamoooooo</h1>
                     <table>
                         <tr>
@@ -54,7 +54,7 @@
                         </tr>
                     </table>
             </article>
-            <article id="Kamsus">
+            <article id="Kamsus" class="aktualnosci">
                 <h1>Kamsus</h1>
                     <table>
                         <tr>
@@ -67,12 +67,24 @@
                                 Never gonna run around and desert you
                                 Never gonna make you cry
                                 Never gonna say goodbye
+                                Never gonna tell a lie and hurt you
+                                Never gonna give you up
+                                Never gonna let you down
+                                Never gonna run around and desert you
+                                Never gonna make you cry
+                                Never gonna say goodbye
+                                Never gonna tell a lie and hurt you 
+                                Never gonna give you up
+                                Never gonna let you down
+                                Never gonna run around and desert you
+                                Never gonna make you cry
+                                Never gonna say goodbye
                                 Never gonna tell a lie and hurt you 
                             </td>
                         </tr>
                     </table>
             </article>
-            <article id="Kamuś">
+            <article id="Kamuś" class="aktualnosci">
                 <h1>Kamuś</h1>
                     <table>
                         <tr>
@@ -86,11 +98,17 @@
                                 Never gonna make you cry
                                 Never gonna say goodbye
                                 Never gonna tell a lie and hurt you 
+                                Never gonna give you up
+                                Never gonna let you down
+                                Never gonna run around and desert you
+                                Never gonna make you cry
+                                Never gonna say goodbye
+                                Never gonna tell a lie and hurt you 
                             </td>
                         </tr>
                     </table>
             </article>
-            <article id="Kamyk">
+            <article id="Kamyk" class="aktualnosci">
                 <h1>Kamyk</h1>
                     <table>
                         <tr>
@@ -99,11 +117,6 @@
                             </td>
                             <td>
                                 Never gonna give you up
-                                Never gonna let you down
-                                Never gonna run around and desert you
-                                Never gonna make you cry
-                                Never gonna say goodbye
-                                Never gonna tell a lie and hurt you 
                             </td>
                         </tr>
                     </table>
