--- a/index.html
+++ b/index.html
@@ -40,21 +40,21 @@
             <p>Strona główna Samorządu Uczniowskiego <b>Zespołu Szkół Elektronicznych, Elektrycznych i Mechanicznych</b> stworzona przez klasę 1TP (technik programista) z okazji dnia otwartego 26 kwietnia 2022 roku.</p>
             
             <a href="aktualnosci.html#Kamoooooo">
-                <article>
+                <article class="article-glowna">
                     <img class="img-article" src="img/kamil.png">
                     <p class="title text-article">Kamoooooo</p>
                     <p class="text text-article">Oto jeden z uczniów, który sobie zasnął na lekcji niemieckiego u pani Kubiczek</p>
                 </article>
             </a>
             <a href="aktualnosci.html#Kamsus">
-                <article>
+                <article class="article-glowna">
                     <img class="img-article" src="img/kamil.png">
                     <p class="title text-article">Kamsus</p>
                     <p class="text text-article">Oto jeden z uczniów, który sobie zasnął na lekcji niemieckiego u pani Kubiczek</p>
                 </article>
             </a>
             <a href="aktualnosci.html#Kamuś">
-                <article>
+                <article class="article-glowna">
                     <img class="img-article" src="img/kamil.png">
                     <p class="title text-article">Kamuś</p>
                     <p class="text text-article">Oto jeden z uczniów, który sobie zasnął na lekcji niemieckiego u pani Kubiczek</p>
@@ -62,7 +62,7 @@
             </a>
                 
             <a href="aktualnosci.html#Kamyk">
-                <article>
+                <article class="article-glowna">
                     <img class="img-article" src="img/kamil.png">
                     <p class="title text-article">Kamyk</p>
                     <p class="text text-article">Oto jeden z uczniów, który sobie zasnął na lekcji niemieckiego u pani Kubiczek</p>
