--- a/onas.html
+++ b/onas.html
@@ -35,21 +35,21 @@
         <content>
             <h1>Członkowie</h1>
             
-            <article>
+            <article class="onas">
                 <img class="img-onas" src="img/patryk.png" title="Patryk">
-                <p class="text-article onas">Patryk</p>
+                <p class="text-article onas-text">Patryk</p>
             </article>
-            <article>
+            <article class="onas">
                 <img class="img-onas" src="img/patryk.png" title="Patryk">
-                <p class="text-article onas">Patrykus</p>
+                <p class="text-article onas-text">Patrykus</p>
             </article>
-            <article>
+            <article class="onas">
                 <img class="img-onas" src="img/patryk.png" title="Patryk">
-                <p class="text-article onas">Patrycjusz</p>
+                <p class="text-article onas-text">Patrycjusz</p>
             </article>
-            <article>
+            <article class="onas">
                 <img class="img-onas" src="img/patryk.png" title="Patryk">
-                <p class="text-article onas">Patrykm</p>
+                <p class="text-article onas-text">Patrykm</p>
             </article>
         </content>
     </main>
