--- a/onas.html
+++ b/onas.html
@@ -52,7 +52,7 @@
     <main>
         <!-- Treść strony -->
         <content>
-            <h1>Członkowie</h1>
+            <h1>O nas</h1>
             
             <article class="onas">
                 <img class="img-onas" src="img/patryk.png" title="Patryk">
